# ms_store_api

./: Cargo.toml  Dockerfile  README.md  config.go  go.mod  go.sum  main.go
.github/workflows/: docker-publish.yml
msstore/: Cargo.toml  client.go  client_test.go  types.go
msstore/internal/genurl/: common.go  types.go  uwp.go  uwp_test.go
msstore/internal/xml/: parser.go  types.go
msstore/src/: client.rs  lib.rs  types.rs
msstore/src/genurl/: common.rs  mod.rs  non_uwp.rs  uwp.rs
server/: Cargo.toml
server/src/: conf.rs  handler.rs  main.rs
