[workspace]
resolver = "3"
members = ["server", "msstore"]

[workspace.dependencies]
anyhow = "1"

tokio = { version = "1", features = ["full"] }

axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "http1",
    "http2",
    "json",
] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

rust-embed = "8.7"
