[workspace]
resolver = "3"
members = ["server", "msstore"]

[workspace.dependencies]
anyhow = "1"

tokio = { version = "1", features = ["full"] }
futures = { version = "0.3" }

axum = "0.8"
tower-http = { version = "0.6", features = ["trace"] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "charset",
    "http2",
    "json",
] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
roxmltree = "0.20"
html-escape = "0.2.13"
config = { version = "0.15", features = ["toml"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json"] }

rust-embed = { version = "8.7", features = ["deterministic-timestamps"] }
