[package]
name = "msstore"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }

tokio = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
roxmltree = { workspace = true }
html-escape = { workspace = true }


rust-embed = { workspace = true }
