[package]
name = "server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "msapi"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }

tokio = { workspace = true }

axum = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

msstore = { path = "../msstore" }
